# docs/swagger.json
@@ -18,9 +18,14 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/orders": {
+        "/comments": {
             "get": {
-                "description": "get orders data",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get comments data",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,14 +33,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "orders"
+                    "comment"
                 ],
-                "summary": "Show an orders",
+                "summary": "Show all comment",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.CommentResponse"
+                            }
                         }
                     }
                 }
@@ -43,26 +51,63 @@
         }
     },
     "definitions": {
-        "models.User": {
+        "dto.CommentResponse": {
             "type": "object",
             "properties": {
-                "age": {
-                    "type": "integer"
-                },
                 "created_at": {
-                    "type": "string"
-                },
-                "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "password": {
+                "message": {
                     "type": "string"
+                },
+                "photo": {
+                    "$ref": "#/definitions/dto.photoResponse"
+                },
+                "photo_id": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/dto.userResponse"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.photoResponse": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "photo_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.userResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
@@ -71,8 +116,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
